# Rule_Based_Vision

./: .gitignore  README.md  build.sh  convert_to_html.py  convert_to_pdf.py  learned_rules.json  run_frontend.sh
backend/: CMakeLists.txt
backend/include/: camera_interface.h  color_segmentation.h  config_manager.h  contour_detector.h  rule_engine.h  vision_processor.h
backend/src/: camera_interface.cpp  color_segmentation.cpp  config_manager.cpp  contour_detector.cpp  jni_interface.cpp  main.cpp  rule_engine.cpp  vision_processor.cpp
config/: default_config.json
frontend/: dependency-reduced-pom.xml  detection_recipes.json  learned_rules.json  measurement_templates.json  pom.xml  session_config.json
frontend/src/main/java/com/doughvision/: ConfigurationManager.java  ConfigurationPanel.java  ControlPanel.java  DoughVisionApp.java  InferencePanel.java  MainFrame.java  RecipePanel.java  TeachModePanel.java  VisionPanel.java
